# substreams-sink-rs

./: CHANGELOG.md  Cargo.toml  README.md  REALEASE.md
core/: Cargo.toml
core/src/: error.rs  lib.rs  memory.rs
substreams-sink-kv/: Cargo.toml
substreams-sink-kv/src/: README.md
