[package]
name = "substreams-sink-core"
version = "0.1.0"
edition = "2021"
description = "Substreams Sink core module"
homepage = "https://substreams.streamingfast.io/"
repository = "https://github.com/streamingfast/substreams-sink-rs/tree/develop/core"
license = "Apache-2.0"
readme = "../README.md"
keywords = [ "substreams", "sink", "streamingfast", "firehose", "thegraph"]
categories = ["wasm"]
rust-version = "1.60"

[dependencies]
prost = { version = "0.10.1" }
prost-types = "0.10.1"